<resources>
    <string name="app_name">IQGamez</string>
    <string name="home">Home</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="start">Start</string>
    <string name="games">Games</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="Enter_Name">Enter Name</string>
    <string name="Enter_Age">Enter Age</string>
    <string name="Start">Start</string>
    <string name="Game">Game</string>
    <string name="scores">Scores</string>

    <string name="card_app">Match Cards Game</string>
    <string name="grid_view">Grid View</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="matching_cards_game">Matching Cards Game</string>
    <string name="btn_medium">Medium</string>
    <string name="txt_matches">Matches: 0/0</string>
    <string name="moves">Moves: 0</string>
    <string name="btn_hard">Hard</string>
    <string name="btn_easy">Easy</string>
</resources>