<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@drawable/splash_gradient"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etName"
        android:hint="@string/Enter_Name"
        android:textColor="#FFFFFF"
        android:textColorHint="#888"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etAge"
        android:hint="@string/Enter_Age"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#888"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnStart"
        android:text="@string/Start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"/>
</LinearLayout>